[package]
name = "graphviz-rust"
version = "0.9.6"
authors = ["BorisZhguchev <zhguchev@gmail.com>"]
categories = ["parsing", "visualization", "api-bindings"]
edition = "2021"
homepage = "https://github.com/besok/graphviz-rust"
keywords = ["graph", "graphviz", "dotfile", "dot", "visualize"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/besok/graphviz-rust"
description = "The library provides the basic access to the graphs in graphviz format with ability to import into or export from it."

[features]
graphviz-exec = []
default = ["graphviz-exec"]

[dependencies]
dot-generator = "0.2.0"
dot-structures = "0.1.2"
into-attr = "0.1.1"
into-attr-derive = "0.2.1"
pest = "2.0"
pest_derive = "2.0"
rand = "0.9"
tempfile = "3.13.0"
[dev-dependencies]
