[package]
name = "into-attr-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
dot-structures = { path = "../dot-structures" }
dot-generator = { path = "../dot-generator" }
into-attr = {path = "../into-attr"}
