[package]
name = "into-attr-derive"
version = "0.2.0"
edition = "2021"
license-file = "../LICENSE"
description = "derive for attributes for graphviz-rust lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
dot-generator = { path = "../dot-generator", version = "0.2.0" }
dot-structures = { path = "../dot-structures", version = "0.1.0" }
into-attr = { path = "../into-attr", version = "0.1.0" }
quote = "1.0"
syn = "1.0"
